# muset

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build_upload.sh  common.h  environment.yaml  km_basic_filter.c  km_diff.c  km_fasta.c  km_join.py  km_merge.c  km_remove.py  km_reverse.c  km_select.c  km_to_vw.py  km_unitig.c  km_unitig.c.bak  km_unitig.cpp  km_unitig_order.py  km_unitig_stats.py  kmat_diff.py  kmat_filter.py  kmat_sample.py  kmat_stats.py  kmer_2_unitig_matrix.sh  kmer_iter.h  reads_2_unitig_matrix.sh  setup.py
.github/workflows/: build_and_upload_conda_packages.yaml
.temp_files/build_graph_98fdee15-27eb-4f07-9a4a-4c755790483a/: links.406  result.989
cmake/: external.cmake  fmt.cmake  kmtricks.cmake  lz4.cmake  sshash.cmake
cmake_pyproject/: MANIFEST.in  README.md  build_and_test.sh  km_select.cpp  setup.py
cmake_pyproject/cython_helpers/: km_basic_filter.pxd  km_basic_filter.pyx  km_diff.pxd  km_diff.pyx  km_fafmt.pxd  km_fafmt.pyx  km_fasta.pxd  km_fasta.pyx  km_merge.pxd  km_merge.pyx  km_reset.pxd  km_reverse.pxd  km_reverse.pyx  km_select.pxd  km_select.pyx
cmake_pyproject/cython_helpers/km_tools_wrappers/: km_fasta_wrapper.py
cmake_pyproject/cython_helpers/src/: km_reset.cpp  km_select.cpp  km_tools.cpp  km_unitig.cpp
cmake_pyproject/km_tools_wrappers/: km_basic_filter_wrapper.py
cmake_pyproject/kmat_tools/: __main__.py
cmake_pyproject/kmat_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
conda/: build_env.yaml
conda/muset/: build.sh  conda_build_config.yaml  meta.yaml
conda_project/: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build_conda_package.sh  convert_and_upload.sh  environment.yaml
conda_project/include/: common.h
conda_project/recipe/: build.sh  meta.yaml
conda_project/scripts/: reads_2_unitig_matrix.sh
conda_project/src/: km_diff.cpp  km_fafmt.cpp  km_reverse.cpp  km_select.cpp  km_tools.cpp
conda_project/test/: D3.fastq
include/: util.hpp
include/builder/: build_skew_index.hpp
include/pthash/: partitioned_phf.hpp  single_phf.hpp
include/pthash/builders/: external_memory_builder_partitioned_phf.hpp  external_memory_builder_single_phf.hpp  internal_memory_builder_partitioned_phf.hpp  internal_memory_builder_single_phf.hpp  search.hpp  util.hpp
include/pthash/utils/: bucketers.hpp  util.hpp
kmat_tools/: MANIFEST.in  build_and_test.sh  build_upload.sh  kmat_tools.yml  pyproject.toml  requirements.txt  setup.py
kmat_tools/conda_package/: conda_build_config.yaml  environment.yml  meta.yaml
kmat_tools/cython_helpers/: km_basic_filter.c  km_basic_filter.pyx  km_fasta.c  km_fasta.pxd  km_fasta.pyx  km_reset.c  km_reset.pxd  km_reset.pyx  km_select.pxd  km_select.pyx  km_unitig.c  km_unitig.pxd  km_unitig.pyx
kmat_tools/cython_helpers/km_tools_wrappers/: km_unitig_wrapper.py
kmat_tools/cython_helpers/lib/include/: common.h  km_basic_filter.h  km_fasta.h  km_reset.h  km_unitig.h
kmat_tools/cython_helpers/lib/src/: km_basic_filter.c  km_fasta.c  km_merge.c  km_reset.c  km_unitig.c
kmat_tools/data/: fof.txt
kmat_tools/kmat_tools/: __main__.py
kmat_tools/kmat_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
kmat_tools/kmat_tools/utils/: utils.py
reproducibility/: README.md  accessions.txt  download_data.sh  download_data_parallel.sh  one_accession_download.sh  reads_2_unitig_matrix.sh
reproducibility/output_1/: kmer_matrix.fasta  options.txt  run_infos.txt  unitigs.fa  unitigs.mat  unitigs_filtered.fa  unitigs_tmp.fa  unitigs_tmp.mat
reproducibility/output_1/config_gatb/: gatb.config
reproducibility/output_1/matrices/: matrix_3.count.lz4
reproducibility/output_1/merge_infos/: partition0.merge_info  partition1.merge_info  partition2.merge_info
reproducibility/output_1/partition_infos/: D1.pinfo  D10.pinfo
reproducibility/output_1/repartition_gatb/: repartition.minimRepart
reproducibility/output_1/superkmers/D1/: SuperKmerBinInfoFile
reproducibility/output_1/superkmers/D10/: SuperKmerBinInfoFile
reproducibility/output_1/superkmers/D2/: SuperKmerBinInfoFile
reproducibility/output_1/superkmers/D3/: SuperKmerBinInfoFile
reproducibility/output_1/superkmers/D4/: SuperKmerBinInfoFile
reproducibility/output_1/superkmers/D5/: SuperKmerBinInfoFile
reproducibility/output_1/superkmers/D6/: SuperKmerBinInfoFile
reproducibility/output_1/superkmers/D7/: SuperKmerBinInfoFile
reproducibility/output_1/superkmers/D8/: SuperKmerBinInfoFile
reproducibility/output_1/superkmers/D9/: SuperKmerBinInfoFile
reproducibility/output_2/: build_infos.txt  options.txt  run_infos.txt  sorted_matrix.txt  unitigs.fa  unitigs.mat  unitigs_filtered.fa  unitigs_tmp.fa  unitigs_tmp.mat
reproducibility/output_2/config_gatb/: gatb.config
reproducibility/output_2/matrices/: matrix_0.count.lz4  matrix_1.count.lz4  matrix_2.count.lz4
reproducibility/output_2/merge_infos/: partition3.merge_info
reproducibility/output_2/minimizers/: minimizers.1  minimizers.2
reproducibility/output_2/superkmers/D1/: SuperKmerBinInfoFile
reproducibility/output_2/superkmers/D10/: SuperKmerBinInfoFile
reproducibility/output_2/superkmers/D2/: SuperKmerBinInfoFile
reproducibility/output_2/superkmers/D3/: SuperKmerBinInfoFile
reproducibility/output_2/superkmers/D4/: SuperKmerBinInfoFile
reproducibility/output_2/superkmers/D5/: SuperKmerBinInfoFile
reproducibility/output_2/superkmers/D6/: SuperKmerBinInfoFile
reproducibility/output_2/superkmers/D7/: SuperKmerBinInfoFile
reproducibility/test/: D6.fastq
scripts/: km_unitig_mean.py  km_unitig_order.py  km_unitig_pa.py  km_unitig_submat.py  reads_2_unitig_matrix.sh  sample.sh
singularity/: Singularity.def
src/: common.h  km_basic_filter.c  km_basic_filter.cpp  km_convert.cpp  km_diff.c  km_diff.cpp  km_fafmt.cpp  km_fasta.cpp  km_ktfilter.cpp  km_merge.c  km_merge.cpp  km_reverse.c  km_reverse.cpp  km_select.c  km_select.cpp  km_tools.c  km_tools.cpp  km_unitig.c  km_unitig.cpp  kmtricks.h
test/: fof.txt  fof_pa.txt
(+2 files in other folders)
